# ray-tracing

./: Cargo.toml  image.ppm
src/: aabb.rs  box.rs  camera.rs  colors.rs  constants.rs  hit.rs  main.rs  material.rs  objects.rs  plane.rs  quaternion.rs  random.rs  ray.rs  sphere.rs  vector3.rs  world.rs
